<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">IPCDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_alert">提示</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    
    
    <string name="menu_accept_setting">接单\n设置</string>
    <string name="title_drivers_location">司机分布</string>
    <string name="drivers_location">司机\n分布</string>
    <string name="menu_start_work">我要上线</string>
    <string name="menu_exchange_work">我要交班</string>
     <string name="orderset">接单设置</string>
    <string name="orderset_autonavi">服务时自动开启导航</string>
    <string name="orderset_useamap">导航时，使用高德客户端</string>
    <string name="orderset_autoaccept">订单自动接单</string>
    <string name="orderset_autoaccept_orange">橙色订单自动接单</string>
    <string name="orderset_accept_blue">是否接收蓝色订单推送</string>
    <string name="orderset_blueorder_timeset">蓝色订单推送时间设置</string>
	
    <string name="menu_leave_work">我要还车</string>
    <string name="menu_pre_end_work">我要回家</string>
    <string name="menu_temp_finish_work">临时小休</string>
    <string name="menu_finish_work">我要下线</string>
    <string name="workstate_start_work">上线中</string>
    <string name="workstate_leave">还车中</string>
    <string name="workstate_exchange_work">交班中</string>
    <string name="workstate_pre_end_work">回家中</string>
    <string name="workstate_temp_end_work">临时小休</string>

</resources>