<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <include 
        android:id="@+id/title_bar"
        layout="@layout/my_main_titile_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/workstate_bg"
	    android:gravity="center_vertical"
	    >
	    <Button 
	        android:id="@+id/start_work_bt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_start_work"
	        android:background="@drawable/work_state"
	        android:layout_centerHorizontal="true"
	        style="@style/Order_Set_TextView"
	        />
	    <Button 
	        android:id="@+id/drivers_location_bt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/order_set_bg"
	        android:layout_centerHorizontal="true"
	        style="@style/Order_Set_TextView"
	        android:text="@string/drivers_location"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        />
	    <Button 
	        android:id="@+id/menu_accept_setting_bt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/order_set_bg"
	        android:layout_centerHorizontal="true"
	        style="@style/Order_Set_TextView"
	        android:text="@string/menu_accept_setting"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        />
	</RelativeLayout>
</RelativeLayout>
