<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mask_bg"
    android:gravity="center"
    >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/dd_dimen_30px"
        android:layout_marginRight="@dimen/dd_dimen_30px"
        android:orientation="vertical"
        >
    <RadioGroup 
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dd_dimen_30px"
        android:paddingRight="@dimen/dd_dimen_30px"
        >
        <RadioButton
            android:id="@+id/exchange_work_rb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dd_dimen_130px"
            android:text="@string/menu_exchange_work"
            android:textSize="@dimen/dd_dimen_38px"
            android:layout_marginLeft="@dimen/dd_dimen_10px"
            >
        </RadioButton>
        <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/dd_dimen_1px"
            android:background="@color/green_line"/>
        <RadioButton
            android:id="@+id/go_home_rb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dd_dimen_130px"
            android:text="@string/menu_pre_end_work"
            android:textSize="@dimen/dd_dimen_38px"
            android:layout_marginLeft="@dimen/dd_dimen_10px">
        </RadioButton>
        <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/dd_dimen_1px"
            android:background="@color/green_line"/>
        <RadioButton
             android:id="@+id/temp_rest_rb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dd_dimen_130px"
            android:text="@string/menu_temp_finish_work"
            android:textSize="@dimen/dd_dimen_38px"
            android:layout_marginLeft="@dimen/dd_dimen_10px"
            >
        </RadioButton>
        <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/dd_dimen_1px"
            android:background="@color/green_line"/>
         <RadioButton
            android:id="@+id/off_line_rb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dd_dimen_130px"
            android:text="@string/menu_finish_work"
            android:textSize="@dimen/dd_dimen_38px"
            android:layout_marginLeft="@dimen/dd_dimen_10px"
            >
        </RadioButton>
        <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/dd_dimen_1px"
            android:background="@color/green_line"/>	
        
    </RadioGroup>
    <LinearLayout 
         android:id="@+id/choice_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/dd_dimen_40px"
         android:paddingLeft="@dimen/dd_dimen_30px"
         android:paddingRight="@dimen/dd_dimen_30px"
         android:paddingBottom="@dimen/dd_dimen_30px">
         <Button 
             android:id="@+id/cancle"
             android:layout_width="0dp"
             android:layout_height="@dimen/dd_dimen_90px"
             android:layout_weight="3"
             android:background="@drawable/btn_back"
             android:text="返回"
             android:textSize="@dimen/dd_dimen_34px"
             android:textColor="@color/dialog_title"
             />
         <Button 
             android:id="@+id/ok"
             android:layout_width="0dp"
             android:layout_height="@dimen/dd_dimen_90px"
             android:layout_weight="4"
             android:text="确定"
             android:layout_marginLeft="@dimen/dd_dimen_30px"
             android:textSize="@dimen/dd_dimen_34px"
             android:textColor="@color/dialog_title"
             />
        </LinearLayout>
 </LinearLayout>
</LinearLayout>
